--- a/project.config.json
+++ b/project.config.json
@@ -9,7 +9,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "1.9.91",
-	"appid": "wx83e1aac12c12d679",
+	"appid": "wx0249c48751160f02",
 	"projectname": "bless",
 	"isGameTourist": false,
 	"condition": {
@@ -21,16 +21,20 @@
 			"current": -1,
 			"list": []
 		},
+		"plugin": {
+			"current": -1,
+			"list": []
+		},
 		"game": {
 			"currentL": -1,
 			"list": []
 		},
 		"miniprogram": {
-			"current": 0,
+			"current": -1,
 			"list": [
 				{
 					"id": 0,
-					"name": "save",
+					"name": "11",
 					"pathName": "pages/save/save",
 					"query": ""
 				}
