--- a/project.config.json
+++ b/project.config.json
@@ -30,12 +30,18 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": -1,
+			"current": 1,
 			"list": [
 				{
 					"id": 0,
 					"name": "11",
-					"pathName": "pages/save/save",
+					"pathName": "pages/get/get",
+					"query": "bid=27"
+				},
+				{
+					"id": 1,
+					"name": "11",
+					"pathName": "pages/personal/personal",
 					"query": ""
 				}
 			]
