--- a/app.json
+++ b/app.json
@@ -7,7 +7,9 @@
     "pages/receive/receive",
     "pages/personal/personal",
     "pages/rank/rank",
-    "pages/remind/remind"
+    "pages/remind/remind",
+    "pages/like/like",
+    "pages/comment/comment"
   ],
   "window": {
     "backgroundTextStyle": "light",
