--- a/project.config.json
+++ b/project.config.json
@@ -30,7 +30,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 1,
+			"current": -1,
 			"list": [
 				{
 					"id": 0,
@@ -40,9 +40,9 @@
 				},
 				{
 					"id": 1,
-					"name": "11",
-					"pathName": "pages/personal/personal",
-					"query": ""
+					"name": "like",
+					"pathName": "pages/comment/comment",
+					"query": "id=27"
 				}
 			]
 		}
