--- a/app.json
+++ b/app.json
@@ -9,7 +9,8 @@
     "pages/rank/rank",
     "pages/remind/remind",
     "pages/like/like",
-    "pages/comment/comment"
+    "pages/comment/comment",
+    "pages/reward/reward"
   ],
   "window": {
     "backgroundTextStyle": "light",
