--- a/project.config.json
+++ b/project.config.json
@@ -10,7 +10,7 @@
 	"compileType": "miniprogram",
 	"libVersion": "1.9.91",
 	"appid": "wx0249c48751160f02",
-	"projectname": "bless",
+	"projectname": "bless1",
 	"isGameTourist": false,
 	"condition": {
 		"search": {
